attached_assets/Pasted-Loaded-2776-words-from-built-in-list-2776-suffix-patter_1772291391189.txt
Loaded 2776 words (from built-in list), 2776 suffix patterns
Tail pattern: XX<word> (last 6 chars of address)
Sample: 1aboratory, 1andscape, 1anguage, 1arge1y, 1atter, 1aunch...
Compute: GPU  |  Power: 100%  |  Max Temp: 73°C (recommended: 73°C)
[Blind] Setting up split-key protocol with TEE...
[Blind] Split-key setup complete (session: 34fe3bac...)
[Blind] Mining with split-key: full private key will NEVER exist on this machine
[Blind] Will stop after finding 2776 addresses (one per word)
[Blind] Mining in Blind Mode - keys will be uploaded to marketplace (0.1000 SOL)
Found 2 GPU device(s)
Kernel compiled with 2776 patterns (38864 bytes in local memory)
[GPU ERROR] clBuildProgram failed: BUILD_PROGRAM_FAILURE - clBuildProgram failed: BUILD_PROGRAM_FAILURE - clBuildProgram failed: BUILD_PROGRAM_FAILURE

Build on <pyopencl.Device 'NVIDIA GeForce RTX 3080 Ti Laptop GPU' on 'NVIDIA CUDA' at 0x20a7dcbb1a0>:

<kernel>:3964:36: error: passing '__constant uchar *' (aka '__constant unsigned char *') to parameter of type 'const __generic unsigned char *' changes address space of pointer
        ge_frombytes_vartime(&tmp, tee_point);
                                   ^~~~~~~~~
<kernel>:3749:57: note: passing argument to parameter 's' here
int ge_frombytes_vartime(ge_p3 *h, const unsigned char *s) {
                                                        ^

(options: -I C:\Users\Aiden\AppData\Local\Packages\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\LocalCache\local-packages\Python312\site-packages\pyopencl\cl)
[GPU ERROR] clBuildProgram failed: BUILD_PROGRAM_FAILURE - clBuildProgram failed: BUILD_PROGRAM_FAILURE - clBuildProgram failed: BUILD_PROGRAM_FAILURE

Build on <pyopencl.Device 'Intel(R) Iris(R) Xe Graphics' on 'Intel(R) OpenCL HD Graphics' at 0x205aa7afc70>:

1:3964:36: error: passing '__constant uchar *' (aka '__constant unsigned char *') to parameter of type 'const unsigned char *' changes address space of pointer
        ge_frombytes_vartime(&tmp, tee_point);
                                   ^~~~~~~~~
1:3749:57: note: passing argument to parameter 's' here
int ge_frombytes_vartime(ge_p3 *h, const unsigned char *s) {
                                                        ^

(options: -I C:\Users\Aiden\AppData\Local\Packages\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\LocalCache\local-packages\Python312\site-packages\pyopencl\cl)
(source saved as C:\Users\Aiden\AppData\Local\Temp\tmppkn6unpt.cl)
ERROR: No GPU workers started — kernel build failed. Check log for details.